raffia/tests/error/scss/value/interpolation/unterminated.snap
---
source: raffia/tests/error.rs
---
error: expect token `}`, but `<eof>` received
  ┌─ unterminated.scss:4:1
  │
4 │ 
  │ ^


